adder service worker

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,8 +3,12 @@
   "name": "3 points",
   "icons": [
     {
-      "src": "favicon.ico",
+      "src": "icons/android-chrome-192x192.png",
       "sizes": "192x192",
+      "type": "image/png"
+    }, {
+      "src": "icons/android-chrome-512x512.png",
+      "sizes": "512x512",
       "type": "image/png"
     }
   ],
